--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ i{
     font-family: "Ubuntu";
     font-size: 2.5rem;
     font-weight:bold ;
-   
 }
 .navbar{
     padding-bottom:0 0 4.5rem;
@@ -41,19 +40,54 @@ i{
     width: 60%;
     transform: rotate(25deg);
 }
-h3{
-    display: inline-block;
-}
+
 .container-fluid p{
     display: inline-block;
-}
+} 
 
+/* features section */
 #features p{
     display: block;
-    text-align: center;
+    font-family: "Montserrat";
 }
 #features i{
     display: block;
-    color: rgb(248, 46, 80);
+    color: rgb(247, 90, 116);
     margin-bottom: 10px;
+}
+#features i:hover{
+    color:#f81537;
+}
+#features h3{
+    font-family: "Montserrat";
+    font-weight: bolder;
+    font-size: 1.5rem;
+}
+#testimonials{
+    padding:7% 15%;
+    text-align: center;
+    background-color: #FF4C68;
+    color:#fff;
+    
+
+}
+#testimonials h2{
+    font-family: "Montserrat";
+    font-weight: boldjh;
+    font-size:3rem;
+    line-height:1.5 ;
+}
+.testimonials-image{
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+#press{
+    background-color: #FF4C68;
+    text-align: center;
+    padding-bottom: 3%;
+}
+.press-logo{
+    width: 15%;
+    margin:20px 20px 50px ;
 }
