--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,12 @@ h1{
     line-height: 1.5;
     color: white;
 }
+@media (max-width:900px){
+    h1{
+        text-align: center;
+        font-size: 2rem;
+    }
+}
 .container-fluid{
     padding: 3% 15%;
 
@@ -45,6 +51,11 @@ i{
     left: 100px;
     
     
+}
+@media (max-width:900px){
+    .title-image{
+        transform:rotate(0);
+    }
 }
 
 .container-fluid p{
